<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="asimmughal.chilloutrecords.main_pages.activities.RestaurantSearchActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        style="@style/Text_Normal"
                        android:text="@string/txt_acc_update" />

                    <EditText
                        android:id="@+id/register_first_name"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_first_name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/register_last_name"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_last_name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/register_email"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_email"
                        android:inputType="textEmailAddress" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/bckgrd_text_fields"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Text_Normal"
                            android:hint="@string/et_hint_country_code" />

                        <TextView
                            android:id="@+id/register_country_code"
                            android:layout_width="match_parent"
                            android:gravity="start"
                            style="@style/Text_Normal" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/register_phone"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_phone"
                        android:inputType="phone" />

                    <TextView
                        android:id="@+id/register_dob"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_dob" />


                    <TextView
                        style="@style/Button_Yes"
                        android:onClick="UpdateDetails"
                        android:text="@string/txt_update_details" />

                    <TextView
                        style="@style/Text_Normal"
                        android:paddingTop="30dp"
                        android:text="@string/txt_acc_update_2" />

                    <EditText
                        android:id="@+id/register_password"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_new_password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/register_password_confirm"
                        style="@style/Edit_Text"
                        android:hint="@string/et_hint_confirm_new_password"
                        android:inputType="textPassword" />

                    <TextView
                        style="@style/Button_Yes"
                        android:onClick="UpdatePassword"
                        android:text="@string/txt_update_password" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_navigation"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>
