<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:background="@drawable/bckgrd_card"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/txt_title"
        style="@style/TextTitle"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/padding_mini"
         />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbarSize="1dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_message"
                style="@style/TextBody"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_medium"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/error_500"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                style="@style/ButtonYes"
                android:text="@string/txt_back" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>