<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/bckgrd_text_fields"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/Header_Text"
                android:text="@string/txt_post_your_review" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/bckgrd_text_fields"
                android:orientation="vertical">

                <TextView
                    style="@style/Text_Tiny"
                    android:text="@string/txt_average_rating"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/rating_average"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:max="10" />

                    <TextView
                        android:id="@+id/rating_average_text"
                        style="@style/Text_Normal"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:text="0"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtfullReview"
                    style="@style/Button_No"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/txt_full_review" />

                <TextView
                    android:id="@+id/txtOk"
                    style="@style/Button_Yes"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/txt_post" />

            </LinearLayout>

        </LinearLayout>


</RelativeLayout>