<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="asimmughal.chilloutrecords.main_pages.activities.RestaurantSearchActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/application_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbarSize="8dp"
                    android:scrollbarThumbVertical="@color/colorAccent"
                    android:scrollbars="vertical" />

            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/no_restaurants"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            style="@style/Header_Text"
            android:text="@string/txt_no_favourites" />

        <TextView
            style="@style/Text_Normal"
            android:text="@string/txt_no_favourites2" />

        <TextView
            style="@style/Button_Yes"
            android:onClick="BTN_SEARCH"
            android:text="@string/txt_ok" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_navigation"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>
